src/model/generated/pseintGrammarParser.java
// Generated from pseintGrammar.g4 by ANTLR 4.5.1
package model.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pseintGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NEGOP=1, ASIGOP=2, COMPOP=3, BINOP=4, MULOP=5, SUMOP=6, RESOP=7, PYC=8, 
		DOSP=9, PARIZQ=10, PARDER=11, CORIZQ=12, CORDER=13, COMA=14, COMMENT=15, 
		LINE_COMMENT=16, WS=17, INT=18, DOUBLE=19, STRING=20, BOOL=21, ALGORITMO=22, 
		FINALGORITMO=23, PROCESO=24, FINPROCESO=25, DEFINIR=26, COMO=27, NUMERO=28, 
		NUMERICO=29, ENTERO=30, CARACTER=31, REAL=32, LOGICO=33, TEXTO=34, CADENA=35, 
		LEER=36, ESCRIBIR=37, DIMENSION=38, PARA=39, HASTA=40, CON=41, PASO=42, 
		HACER=43, FINPARA=44, BORRAR=45, PANTALLA=46, ESPERAR=47, TECLA=48, SEGUNDOS=49, 
		MILISEGUNDOS=50, SI=51, ENTONCES=52, SINO=53, FINSI=54, SEGUN=55, CASO=56, 
		DE=57, OTRO=58, MODO=59, FINSEGUN=60, MIENTRAS=61, FINMIENTRAS=62, REPETIR=63, 
		QUE=64, SUBPROCESO=65, FINSUBPROCESO=66, FUNCION=67, FINFUNCION=68, LIMPIAR=69, 
		MOD=70, NO=71, VERDADERO=72, FALSO=73, ID=74;
	public static final int
		RULE_pseint = 0, RULE_procedimiento = 1, RULE_principal = 2, RULE_comandos = 3, 
		RULE_comando = 4, RULE_bloqueSi = 5, RULE_bloquePara = 6, RULE_bloqueMientras = 7, 
		RULE_bloqueRepetir = 8, RULE_bloqueSegun = 9, RULE_bloqueDeclaracion = 10, 
		RULE_bloqueAsignacion = 11, RULE_bloqueDimension = 12, RULE_bloqueBorrarPantalla = 13, 
		RULE_bloqueEscribir = 14, RULE_bloqueLeer = 15, RULE_bloqueEsperar = 16, 
		RULE_expr = 17, RULE_valor = 18, RULE_exprLista = 19, RULE_idLista = 20, 
		RULE_varArreglo = 21, RULE_tipoDato = 22, RULE_tipoDatoEntero = 23, RULE_tipoDatoReal = 24, 
		RULE_tipoDatoCaracter = 25, RULE_tipoDatoTexto = 26, RULE_tipoDatoLogico = 27;
	public static final String[] ruleNames = {
		"pseint", "procedimiento", "principal", "comandos", "comando", "bloqueSi", 
		"bloquePara", "bloqueMientras", "bloqueRepetir", "bloqueSegun", "bloqueDeclaracion", 
		"bloqueAsignacion", "bloqueDimension", "bloqueBorrarPantalla", "bloqueEscribir", 
		"bloqueLeer", "bloqueEsperar", "expr", "valor", "exprLista", "idLista", 
		"varArreglo", "tipoDato", "tipoDatoEntero", "tipoDatoReal", "tipoDatoCaracter", 
		"tipoDatoTexto", "tipoDatoLogico"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'<-'", null, null, null, null, null, "';'", "':'", "'('", 
		"')'", "'['", "']'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NEGOP", "ASIGOP", "COMPOP", "BINOP", "MULOP", "SUMOP", "RESOP", 
		"PYC", "DOSP", "PARIZQ", "PARDER", "CORIZQ", "CORDER", "COMA", "COMMENT", 
		"LINE_COMMENT", "WS", "INT", "DOUBLE", "STRING", "BOOL", "ALGORITMO", 
		"FINALGORITMO", "PROCESO", "FINPROCESO", "DEFINIR", "COMO", "NUMERO", 
		"NUMERICO", "ENTERO", "CARACTER", "REAL", "LOGICO", "TEXTO", "CADENA", 
		"LEER", "ESCRIBIR", "DIMENSION", "PARA", "HASTA", "CON", "PASO", "HACER", 
		"FINPARA", "BORRAR", "PANTALLA", "ESPERAR", "TECLA", "SEGUNDOS", "MILISEGUNDOS", 
		"SI", "ENTONCES", "SINO", "FINSI", "SEGUN", "CASO", "DE", "OTRO", "MODO", 
		"FINSEGUN", "MIENTRAS", "FINMIENTRAS", "REPETIR", "QUE", "SUBPROCESO", 
		"FINSUBPROCESO", "FUNCION", "FINFUNCION", "LIMPIAR", "MOD", "NO", "VERDADERO", 
		"FALSO", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pseintGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pseintGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PseintContext extends ParserRuleContext {
		public PrincipalContext principal() {
			return getRuleContext(PrincipalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(pseintGrammarParser.EOF, 0); }
		public List<ProcedimientoContext> procedimiento() {
			return getRuleContexts(ProcedimientoContext.class);
		}
		public ProcedimientoContext procedimiento(int i) {
			return getRuleContext(ProcedimientoContext.class,i);
		}
		public PseintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pseint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).enterPseint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).exitPseint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pseintGrammarVisitor ) return ((pseintGrammarVisitor<? extends T>)visitor).visitPseint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PseintContext pseint() throws RecognitionException {
		PseintContext _localctx = new PseintContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pseint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUBPROCESO || _la==FUNCION) {
				{
				{
				setState(56);
				procedimiento();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			principal();
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUBPROCESO || _la==FUNCION) {
				{
				{
				setState(63);
				procedimiento();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedimientoContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(pseintGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(pseintGrammarParser.ID, i);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode FUNCION() { return getToken(pseintGrammarParser.FUNCION, 0); }
		public TerminalNode SUBPROCESO() { return getToken(pseintGrammarParser.SUBPROCESO, 0); }
		public TerminalNode FINFUNCION() { return getToken(pseintGrammarParser.FINFUNCION, 0); }
		public TerminalNode FINSUBPROCESO() { return getToken(pseintGrammarParser.FINSUBPROCESO, 0); }
		public TerminalNode ASIGOP() { return getToken(pseintGrammarParser.ASIGOP, 0); }
		public TerminalNode PARIZQ() { return getToken(pseintGrammarParser.PARIZQ, 0); }
		public TerminalNode PARDER() { return getToken(pseintGrammarParser.PARDER, 0); }
		public ProcedimientoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimiento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).enterProcedimiento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).exitProcedimiento(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pseintGrammarVisitor ) return ((pseintGrammarVisitor<? extends T>)visitor).visitProcedimiento(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedimientoContext procedimiento() throws RecognitionException {
		ProcedimientoContext _localctx = new ProcedimientoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_procedimiento);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_la = _input.LA(1);
			if ( !(_la==SUBPROCESO || _la==FUNCION) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(74);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(72);
				match(ID);
				setState(73);
				match(ASIGOP);
				}
				break;
			}
			setState(76);
			match(ID);
			setState(85);
			_la = _input.LA(1);
			if (_la==PARIZQ) {
				{
				setState(77);
				match(PARIZQ);
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(78);
					match(ID);
					}
					}
					setState(83);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(84);
				match(PARDER);
				}
			}

			setState(87);
			comandos();
			setState(88);
			_la = _input.LA(1);
			if ( !(_la==FINSUBPROCESO || _la==FINFUNCION) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrincipalContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(pseintGrammarParser.ID, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode PROCESO() { return getToken(pseintGrammarParser.PROCESO, 0); }
		public TerminalNode ALGORITMO() { return getToken(pseintGrammarParser.ALGORITMO, 0); }
		public TerminalNode FINPROCESO() { return getToken(pseintGrammarParser.FINPROCESO, 0); }
		public TerminalNode FINALGORITMO() { return getToken(pseintGrammarParser.FINALGORITMO, 0); }
		public PrincipalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_principal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).enterPrincipal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).exitPrincipal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pseintGrammarVisitor ) return ((pseintGrammarVisitor<? extends T>)visitor).visitPrincipal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrincipalContext principal() throws RecognitionException {
		PrincipalContext _localctx = new PrincipalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_principal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ( !(_la==ALGORITMO || _la==PROCESO) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(91);
			match(ID);
			setState(92);
			comandos();
			setState(93);
			_la = _input.LA(1);
			if ( !(_la==FINALGORITMO || _la==FINPROCESO) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosContext extends ParserRuleContext {
		public ComandoContext comando() {
			return getRuleContext(ComandoContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).exitComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pseintGrammarVisitor ) return ((pseintGrammarVisitor<? extends T>)visitor).visitComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comandos);
		try {
			setState(99);
			switch (_input.LA(1)) {
			case DEFINIR:
			case LEER:
			case ESCRIBIR:
			case DIMENSION:
			case PARA:
			case BORRAR:
			case ESPERAR:
			case SI:
			case SEGUN:
			case MIENTRAS:
			case REPETIR:
			case LIMPIAR:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				comando();
				setState(96);
				comandos();
				}
				break;
			case FINALGORITMO:
			case FINPROCESO:
			case HASTA:
			case FINPARA:
			case SINO:
			case FINSI:
			case CASO:
			case DE:
			case FINSEGUN:
			case FINMIENTRAS:
			case FINSUBPROCESO:
			case FINFUNCION:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public BloqueSiContext bloqueSi() {
			return getRuleContext(BloqueSiContext.class,0);
		}
		public BloqueParaContext bloquePara() {
			return getRuleContext(BloqueParaContext.class,0);
		}
		public BloqueMientrasContext bloqueMientras() {
			return getRuleContext(BloqueMientrasContext.class,0);
		}
		public BloqueRepetirContext bloqueRepetir() {
			return getRuleContext(BloqueRepetirContext.class,0);
		}
		public BloqueSegunContext bloqueSegun() {
			return getRuleContext(BloqueSegunContext.class,0);
		}
		public BloqueDeclaracionContext bloqueDeclaracion() {
			return getRuleContext(BloqueDeclaracionContext.class,0);
		}
		public BloqueAsignacionContext bloqueAsignacion() {
			return getRuleContext(BloqueAsignacionContext.class,0);
		}
		public BloqueDimensionContext bloqueDimension() {
			return getRuleContext(BloqueDimensionContext.class,0);
		}
		public BloqueBorrarPantallaContext bloqueBorrarPantalla() {
			return getRuleContext(BloqueBorrarPantallaContext.class,0);
		}
		public BloqueEscribirContext bloqueEscribir() {
			return getRuleContext(BloqueEscribirContext.class,0);
		}
		public BloqueLeerContext bloqueLeer() {
			return getRuleContext(BloqueLeerContext.class,0);
		}
		public BloqueEsperarContext bloqueEsperar() {
			return getRuleContext(BloqueEsperarContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).exitComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pseintGrammarVisitor ) return ((pseintGrammarVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comando);
		try {
			setState(113);
			switch (_input.LA(1)) {
			case SI:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				bloqueSi();
				}
				break;
			case PARA:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				bloquePara();
				}
				break;
			case MIENTRAS:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				bloqueMientras();
				}
				break;
			case REPETIR:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				bloqueRepetir();
				}
				break;
			case SEGUN:
				enterOuterAlt(_localctx, 5);
				{
				setState(105);
				bloqueSegun();
				}
				break;
			case DEFINIR:
				enterOuterAlt(_localctx, 6);
				{
				setState(106);
				bloqueDeclaracion();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 7);
				{
				setState(107);
				bloqueAsignacion();
				}
				break;
			case DIMENSION:
				enterOuterAlt(_localctx, 8);
				{
				setState(108);
				bloqueDimension();
				}
				break;
			case BORRAR:
			case LIMPIAR:
				enterOuterAlt(_localctx, 9);
				{
				setState(109);
				bloqueBorrarPantalla();
				}
				break;
			case ESCRIBIR:
				enterOuterAlt(_localctx, 10);
				{
				setState(110);
				bloqueEscribir();
				}
				break;
			case LEER:
				enterOuterAlt(_localctx, 11);
				{
				setState(111);
				bloqueLeer();
				}
				break;
			case ESPERAR:
				enterOuterAlt(_localctx, 12);
				{
				setState(112);
				bloqueEsperar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueSiContext extends ParserRuleContext {
		public TerminalNode SI() { return getToken(pseintGrammarParser.SI, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ENTONCES() { return getToken(pseintGrammarParser.ENTONCES, 0); }
		public List<ComandosContext> comandos() {
			return getRuleContexts(ComandosContext.class);
		}
		public ComandosContext comandos(int i) {
			return getRuleContext(ComandosContext.class,i);
		}
		public TerminalNode FINSI() { return getToken(pseintGrammarParser.FINSI, 0); }
		public TerminalNode SINO() { return getToken(pseintGrammarParser.SINO, 0); }
		public BloqueSiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloqueSi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).enterBloqueSi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).exitBloqueSi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pseintGrammarVisitor ) return ((pseintGrammarVisitor<? extends T>)visitor).visitBloqueSi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueSiContext bloqueSi() throws RecognitionException {
		BloqueSiContext _localctx = new BloqueSiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bloqueSi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(SI);
			setState(116);
			expr(0);
			setState(117);
			match(ENTONCES);
			setState(118);
			comandos();
			setState(121);
			_la = _input.LA(1);
			if (_la==SINO) {
				{
				setState(119);
				match(SINO);
				setState(120);
				comandos();
				}
			}

			setState(123);
			match(FINSI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueParaContext extends ParserRuleContext {
		public TerminalNode PARA() { return getToken(pseintGrammarParser.PARA, 0); }
		public TerminalNode ID() { return getToken(pseintGrammarParser.ID, 0); }
		public TerminalNode ASIGOP() { return getToken(pseintGrammarParser.ASIGOP, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode HASTA() { return getToken(pseintGrammarParser.HASTA, 0); }
		public TerminalNode HACER() { return getToken(pseintGrammarParser.HACER, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode FINPARA() { return getToken(pseintGrammarParser.FINPARA, 0); }
		public TerminalNode CORIZQ() { return getToken(pseintGrammarParser.CORIZQ, 0); }
		public ExprListaContext exprLista() {
			return getRuleContext(ExprListaContext.class,0);
		}
		public TerminalNode CORDER() { return getToken(pseintGrammarParser.CORDER, 0); }
		public TerminalNode CON() { return getToken(pseintGrammarParser.CON, 0); }
		public TerminalNode PASO() { return getToken(pseintGrammarParser.PASO, 0); }
		public BloqueParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloquePara; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).enterBloquePara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pseintGrammarListener ) ((pseintGrammarListener)listener).exitBloquePara(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pseintGrammarVisitor ) return ((pseintGrammarVisitor<? extends T>)visitor).visitBloquePara(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueParaContext bloquePara() throws RecognitionException {
		BloqueParaContext _localctx = new BloqueParaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bloquePara);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(PARA);
			setState(126);
			match(ID);
			setState(131);
			_la = _input.LA(1);
			if (_la==CORIZQ) {
				{
				setState(127);
				match(CORIZQ);
				setState(128);
				exprLista();
				setState(129);
				match(CORDER);
				}
			}

			setState(133);
			match(ASIGOP);
			setState(134);
			expr(0);
			setState(135);
			match(HASTA);
			setState(136);
			expr(0);
			setState(140);
			_la = _input.LA(1);
			if (_la==CON) {
				{
				setState(137);
				match(CON);
				setState(138);
				match(PASO);
				setState(139);
				expr(0);
				}
			}

			setState(142);
			match(HACER);
			setState(143);
			comandos();
			setState(144);
			match(FINPARA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
